--- a/frontend/templates/main.html
+++ b/frontend/templates/main.html
@@ -1,2 +1,3 @@
-<button ng-click="allOn()">ON</button>
-<button ng-click="allOff()">OFF</button>
+<!-- <button ng-click="allOn()">ON</button>
+<button ng-click="allOff()">OFF</button> -->
+<button ng-click="allOn()">RANDOMIZE THAT SHIT</button>
